--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
         }
     ],
     "require": {
-	"sonata-project/admin-bundle": "dev-master",
-	"symfony/security-acl": "^3.0"
+	    "sonata-project/admin-bundle": "^3.1",
+	    "symfony/security-acl": "^3.0",
         "php": "^5.3",
         "doctrine/mongodb-odm": "^1.0",
         "doctrine/mongodb-odm-bundle": "^3.0",
