--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
 	    "symfony/security-acl": "^3.0",
         "php": "^5.3",
         "doctrine/mongodb-odm": "^1.0",
-        "doctrine/mongodb-odm-bundle": "^3.0",
+        "doctrine/mongodb-odm-bundle": "^3.0"
     },
     "require-dev": {
         "jmikola/geojson": "^1.0",
